# GliomaAI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GliomaClassifier/: CMakeLists.txt  GliomaClassifier.py
GliomaClassifier/PreProcessing/: __init__.py  apply_XAI.py  apply_classification.py  apply_n4.py  apply_norm.py  apply_skull.py  densenet_model.py  model_manager.py  prepare_classification.py  resnet_model.py
GliomaClassifier/Resources/UI/: GliomaClassifier.ui  GliomaClassifier1.ui
